--- a/index.html
+++ b/index.html
@@ -54,10 +54,7 @@
 
                 <div class="col-lg-6 historia">
                     <h1>Sobre mim</h1>
-                    <p>Sou estudante na área de Ciência da computação no quarto semestre da faculdade, no momento
-                        fazendo faculdade e curso de Desenvolvimento Web Full Stack pela digital House, gosto muito da
-                        programação back-end, quanto de front-end, porem a parte de pack-end me atrai mais pela sua
-                        logica computacional.</p>
+                    <p>No momento estou cursando Ciência da computação na Faculdade Unasp/sp. Também curso desenvolvimento Web Full Stack na Digital House. Gosto tanto da programação back-end quanto da front-end, porem a parte de back-end me atrai mais.</p>
                 </div>
             </div>
         </div>
